--- a/scss/package.json
+++ b/scss/package.json
@@ -3,12 +3,15 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "node src/scripts/build.js"
     },
     "keywords": [],
     "author": "Franco M. Ruiz",
     "license": "ISC",
     "dependencies": {
         "normalize-scss": "^7.0.1"
+    },
+    "devDependencies": {
+        "node-sass": "^9.0.0"
     }
 }
