--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,9 +3,14 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
+    "scripts": {
+        "build": "rollup -c --bundleConfigAsCjs"
+    },
     "devDependencies": {
         "@types/react": "^18.2.18",
         "react": "^18.2.0",
+        "rollup": "^3.27.2",
+        "rollup-plugin-typescript2": "^0.35.0",
         "typescript": "^5.1.6"
     }
 }
