--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "prepare": "husky install",
         "release": "standard-version --no-verify",
         "commit": "git add . && cz",
-        "build": "yarn lerna run build"
+        "build": "yarn lerna run build",
+        "dev": "yarn lerna run dev"
     },
     "keywords": [],
     "author": "Franco M. Ruiz",
