--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,7 +4,8 @@
     "main": "dist/index.js",
     "license": "MIT",
     "scripts": {
-        "build": "rollup -c --bundleConfigAsCjs"
+        "build": "rollup -c --bundleConfigAsCjs",
+        "dev": "yarn build --watch"
     },
     "devDependencies": {
         "@types/prop-types": "^15.7.5",
