--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "node src/scripts/build.js"
+        "build": "node src/scripts/build.js",
+        "dev": "nodemon --watch src --exec yarn build -e"
     },
     "keywords": [],
     "author": "Franco M. Ruiz",
@@ -12,6 +13,7 @@
         "normalize-scss": "^7.0.1"
     },
     "devDependencies": {
-        "node-sass": "^9.0.0"
+        "node-sass": "^9.0.0",
+        "nodemon": "^3.0.1"
     }
 }
