feat(foundation): create foundation package and Text component in react package

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "workspaces": {
         "packages": [
             "packages/*",
-            "playgrounds/*"
+            "playgrounds/*",
+            "foundation/*"
         ],
         "nohoist": [
             "**/normalize-scss"
