--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,6 +2,11 @@
     "compilerOptions": {
         "outDir": "lib",
         "module": "esnext",
+        "paths": {
+            "@ds.f/*": [
+                "../*"
+            ]
+        },
         "lib": [
             "DOM",
             "ESNext"
