--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
     "version": "0.0.0",
-    "packages": ["packages/*", "playgrounds/*"],
+    "packages": ["foundation/*", "packages/*", "playgrounds/*"],
     "npmClient": "yarn",
     "stream": true
 }
