--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,8 +8,15 @@
         "dev": "yarn build --watch"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@testing-library/jest-dom": "^6.0.1",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
         "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.18",
+        "jest": "^29.6.2",
         "react": "^18.2.0",
         "rollup": "^3.27.2",
         "rollup-plugin-typescript2": "^0.35.0",
