--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,7 +5,9 @@
     "license": "MIT",
     "scripts": {
         "build": "rollup -c --bundleConfigAsCjs",
-        "dev": "yarn build --watch"
+        "dev": "yarn build --watch",
+        "test": "jest --verbose",
+        "test:watch": "yarn test --watch"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.10",
@@ -17,6 +19,7 @@
         "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.18",
         "jest": "^29.6.2",
+        "jest-environment-jsdom": "^29.6.2",
         "react": "^18.2.0",
         "rollup": "^3.27.2",
         "rollup-plugin-typescript2": "^0.35.0",
