test(select): add new test cases for Select component

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -20,10 +20,16 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "declaration": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "types": [
+            "jest",
+            "node",
+            "@testing-library/jest-dom"
+        ]
     },
     "include": [
-        "src"
+        "src",
+        "jest-setup.ts"
     ],
     "exclude": [
         "node_modules",
