--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,16 +13,20 @@
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-react": "^7.22.5",
         "@babel/preset-typescript": "^7.22.5",
+        "@testing-library/dom": "^9.3.1",
         "@testing-library/jest-dom": "^6.0.1",
         "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.3",
         "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.18",
+        "@types/testing-library__jest-dom": "^6.0.0",
         "jest": "^29.6.2",
         "jest-environment-jsdom": "^29.6.2",
         "react": "^18.2.0",
         "rollup": "^3.27.2",
         "rollup-plugin-typescript2": "^0.35.0",
+        "ts-jest": "^29.1.1",
         "typescript": "^5.1.6"
     }
 }
